# ToyLearnDX

./: .gitignore
Project/: CMakeLists.txt  build_msvc.cmd
Project/Blending/: CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp
Project/Blending/HLSL/: Basic.hlsli  Basic_2D_VS.hlsl  Basic_3D_PS.hlsl  Basic_3D_VS.hlsl
Project/Camera/: CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp
Project/Camera/HLSL/: Basic.hlsli  Basic_2D_PS.hlsl  Basic_3D_VS.hlsl  LightHelper.hlsli
Project/Common/: Camera.cpp  Camera.h  Geometry.h  RenderStates.cpp  RenderStates.h  Transform.cpp  Transform.h  d3dApp.cpp  d3dApp.h
Project/Cube/: CMakeLists.txt  GameApp.cpp  GameApp.h  d3dApp.cpp  d3dApp.h  d3dUtil.h
Project/Cube/HLSL/: Cube.hlsli  Cube_PS.hlsl
Project/DXInit/: CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp  d3dApp.cpp  d3dUtil.h
Project/Depth Test/: BasicEffect.cpp  CMakeLists.txt  Effect.h  GameApp.cpp  GameApp.h  GameObject.cpp  Main.cpp
Project/Depth Test/HLSL/: Basic.hlsli  Basic_3D_PS.hlsl  LightHelper.hlsli
Project/DepthAndStenciling/: CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp
Project/DepthAndStenciling/HLSL/: Basic.hlsli  Basic_3D_VS.hlsl  LightHelper.hlsli
Project/ImGui-Cube/: CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp  d3dApp.h
Project/ImGui-Cube/HLSL/: Cube.hlsli  Cube_PS.hlsl  Cube_VS.hlsl
Project/Interoperability/: CMakeLists.txt  DXTrace.h  GameApp.cpp  GameApp.h  Keyboard.cpp  Keyboard.h  Main.cpp  Mouse.cpp  Mouse.h  d3dApp.cpp  d3dApp.h
Project/Interoperability/HLSL/: Light.hlsli  LightHelper.hlsli  Light_VS.hlsl
Project/Lighting/: CMakeLists.txt  GameApp.cpp  GameApp.h  Geometry.h  LightHelper.h  Main.cpp
Project/Living Without FX11/: BasicEffect.cpp  CMakeLists.txt  Effect.h  EffectHelper.h  GameApp.cpp  GameApp.h  GameObject.h  Main.cpp
Project/TextureMapping/: CMakeLists.txt  CpuTimer.cpp  CpuTimer.h  DXTrace.cpp  GameApp.cpp  GameApp.h  Main.cpp  Vertex.cpp  Vertex.h  d3dApp.cpp  d3dUtil.h
Project/Triangle/: CMakeLists.txt  GameApp.cpp  GameApp.h  Main.cpp  d3dApp.cpp  d3dUtil.cpp  d3dUtil.h
(+9 files in other folders)
